Added product component template.

--- a/webshop/src/app/app.component.html
+++ b/webshop/src/app/app.component.html
@@ -1,17 +1,9 @@
 <mat-toolbar color="primary" class="app-header">
   <div>My very own Web Shop</div>
   <span class="nav-tool-items">
-    <a mat-button routerLink="login" routerLinkActive="active">Login</a>
-    <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Signup</a>
+    <a mat-button routerLink="login" routerLinkActive="active">Log In</a>
+    <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
   </span>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
-
-<footer class="footer">
-  <div class="container">
-      <p>
-        © Copyright 2021. All rights reserved.
-      </p>
-  </div>
-</footer>
