--- a/webshop/src/app/components/login/login.component.html
+++ b/webshop/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
 
   <mat-card class="box">
     <mat-card-header>
-      <mat-card-title>Sign In</mat-card-title>
+      <mat-card-title>Log In</mat-card-title>
     </mat-card-header>
 
     <form class="example-form">
@@ -12,10 +12,14 @@
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password">
+          <input matInput placeholder="Password" type="password">
         </mat-form-field>
       </mat-card-content>
-      <button mat-stroked-button color="accent" class="btn-block">Sign-in</button>
+      <button mat-stroked-button color="accent" class="btn-block">Log In</button>
     </form>
   </mat-card>
 </div>
+
+<footer id="footer">
+  <p>© Copyright 2021. All rights reserved.</p>
+</footer>
