--- a/webshop/src/app/components/register/register.component.html
+++ b/webshop/src/app/components/register/register.component.html
@@ -16,11 +16,11 @@
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password">
+          <input matInput placeholder="Password" type="password">
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password again">
+          <input matInput placeholder="Password again" type="password">
         </mat-form-field>
 
       </mat-card-content>
@@ -30,3 +30,7 @@
     </form>
   </mat-card>
 </div>
+
+<footer id="footer">
+  <p>© Copyright 2021. All rights reserved.</p>
+</footer>
