Complete register page with actual communication with node server. Added CORS to server.

--- a/webshop/src/styles.css
+++ b/webshop/src/styles.css
@@ -88,6 +88,10 @@ footer {
   width: 100%;
 }
 
+.example-full-width {
+  padding: 6px 0;
+}
+
 .main-wrapper mat-card-header {
   text-align: center;
   width: 100%;
