--- a/webshop/src/app/components/register/register.component.html
+++ b/webshop/src/app/components/register/register.component.html
@@ -8,24 +8,52 @@
 
       <mat-card-content>
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Username">
+          <input name="username" placeholder="Username" matInput [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
+          <mat-error *ngIf="usernameFormControl.hasError('required')">
+            Username is <strong>required!</strong>
+          </mat-error>
+          <mat-error *ngIf="usernameFormControl.hasError('minlength')">
+            Username must be at least 6 characters.
+          </mat-error>
+          <mat-error *ngIf="usernameFormControl.hasError('pattern')">
+            Username must contain only alphanumeric characters, underscores and dashes.
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Email">
+          <input name="email" placeholder="Email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher">
+          <mat-error *ngIf="emailFormControl.hasError('required')">
+            Email is <strong>required!</strong>
+          </mat-error>
+          <mat-error *ngIf="emailFormControl.hasError('pattern')">
+            Please enter a valid email address!
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password" type="password">
+          <input name="password" placeholder="Password" type="password" matInput [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
+          <mat-error *ngIf="passwordFormControl.hasError('required')">
+            Password is <strong>required!</strong>
+          </mat-error>
+          <mat-error *ngIf="passwordFormControl.hasError('minlength')">
+            Password must be at least 8 characters.
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password again" type="password">
+          <input name="passwordConfirm" placeholder="Password confirmation" type="password"  matInput [formControl]="passwordConfirmFormControl" [errorStateMatcher]="matcher"
+                 pattern="{{ passwordFormControl.value }}">
+          <mat-error *ngIf="passwordConfirmFormControl.hasError('required')">
+            You must confirm your password!
+          </mat-error>
+          <mat-error *ngIf="passwordConfirmFormControl.hasError('pattern')">
+            Password must be the same as confirm password!
+          </mat-error>
         </mat-form-field>
 
       </mat-card-content>
 
-      <button mat-stroked-button color="accent" class="btn-block">Register</button>
+      <button mat-stroked-button color="accent" class="btn-block" (click)="register()">Register</button>
 
     </form>
   </mat-card>
