--- a/webshop/src/app/components/login/login.component.html
+++ b/webshop/src/app/components/login/login.component.html
@@ -8,14 +8,20 @@
     <form class="example-form">
       <mat-card-content>
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Username">
+          <input name="username" placeholder="Username" matInput [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
+          <mat-error *ngIf="usernameFormControl.hasError('required')">
+            Username is <strong>required!</strong>
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password" type="password">
+          <input name="password" placeholder="Password" type="password" matInput [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
+          <mat-error *ngIf="passwordFormControl.hasError('required')">
+            Password is <strong>required!</strong>
+          </mat-error>
         </mat-form-field>
       </mat-card-content>
-      <button mat-stroked-button color="accent" class="btn-block">Log In</button>
+      <button mat-stroked-button color="accent" class="btn-block" (click)="login()">Log In</button>
     </form>
   </mat-card>
 </div>
