--- a/webshop/src/app/app.component.html
+++ b/webshop/src/app/app.component.html
@@ -1,8 +1,11 @@
 <mat-toolbar color="primary" class="app-header">
   <div>My very own Web Shop</div>
   <span class="nav-tool-items">
-    <a mat-button routerLink="login" routerLinkActive="active">Log In</a>
-    <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
+    <a *ngIf="isLoggedOut()" mat-button routerLink="login" routerLinkActive="active">Log In</a>
+    <a *ngIf="isLoggedOut()" mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
+    <a *ngIf="isLoggedIn()" mat-button routerLink="products" routerLinkActive="active">Store</a>
+    <a *ngIf="isLoggedIn()" mat-button routerLink="products" routerLinkActive="active">Cart</a>
+    <a *ngIf="isLoggedIn()" mat-button mat-raised-button routerLink="login" routerLinkActive="active" (click)="logOut()">Log Out</a>
   </span>
 </mat-toolbar>
 
