Listing products from Node server.

--- a/webshop/src/app/components/stepper-input/stepper-input.component.html
+++ b/webshop/src/app/components/stepper-input/stepper-input.component.html
@@ -2,7 +2,7 @@
   <button class="toggle-less" (click)="toggleLess()">
     <img src="assets/minus.svg" alt="Less"/>
   </button>
-  <div class="stepper-input-field" name="range-value" aria-atomic="true" aria-live="polite" aria-relevant="all">
+  <div class="stepper-input-field" aria-atomic="true" aria-live="polite" aria-relevant="all">
     {{renderedValue}}
   </div>
   <button class="toggle-more" (click)="toggleMore()">
