Added order page and empty cart function.

--- a/webshop/src/app/components/order/order.component.css
+++ b/webshop/src/app/components/order/order.component.css
@@ -11,7 +11,7 @@
   }
 }
 
-#product {
+#card {
   top: 0;
   margin-bottom: 24px;
   opacity: 1;
@@ -25,17 +25,6 @@
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
 }
 
-#description {
-  text-align: justify;
-  text-justify: inter-word;
-}
-
-img {
-  float: left;
-  width: 80px;
-  height: 80px;
-}
-
 .mat-stroked-button {
   border: 1px solid currentColor;
   line-height: 36px;
@@ -44,25 +33,21 @@ img {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 20% 50% 30%;
+  grid-template-columns: 50% 25% 25%;
   padding: 10px;
 }
 
-.first-column {
-  grid-column-start: 1;
+.grid-container2 {
+  display: grid;
+  grid-template-columns: auto;
+  padding: 10px;
 }
 
-stepper-input {
-  margin: auto;
-  grid-column-start: 2;
-  grid-row-start: 1;
-  grid-row-end: 3;
+.right-align {
+  text-align: right;
 }
 
-.grid-container button {
-  grid-column-start: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
-  width: 75%;
+button {
   margin: auto;
+  width: 20%;
 }
