--- a/webshop/src/app/app.component.html
+++ b/webshop/src/app/app.component.html
@@ -5,6 +5,7 @@
     <a *ngIf="isLoggedOut()" mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
     <a *ngIf="isLoggedIn()" mat-button routerLink="products" routerLinkActive="active">Store</a>
     <a *ngIf="isLoggedIn()" mat-button routerLink="cart" routerLinkActive="active">Cart</a>
+    <a *ngIf="isLoggedIn()" mat-button routerLink="order" routerLinkActive="active">Order</a>
     <a *ngIf="isLoggedIn()" mat-button mat-raised-button routerLink="login" routerLinkActive="active" (click)="logOut()">Log Out</a>
   </span>
 </mat-toolbar>
