--- a/webshop/src/app/components/cart/cart.component.html
+++ b/webshop/src/app/components/cart/cart.component.html
@@ -20,7 +20,7 @@
         <mat-label class="first-column">Price: {{product.price}} $</mat-label>
 
         <mat-label class="first-column">Total: {{product.amount * product.price | number : '1.2-2'}} $</mat-label>
-        <app-stepper-input [step]="1" [min]="0" [max]="product.stock" [(value)]="product.amount" id="stepper"></app-stepper-input>
+        <stepper-input [step]="1" [min]="0" [max]="product.stock" [(value)]="product.amount" id="stepper"></stepper-input>
         <button mat-stroked-button color="accent" class="grid-item2" (click)="modifyCart(product)" *ngIf="product.amount !== 0">Modify</button>
         <button mat-stroked-button color="accent" class="grid-item2" (click)="removeFromCart(product)" *ngIf="product.amount === 0">Remove</button>
       </div>
